--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                   <a class="nav-link" href="#dash">Dashboard</a>
                   <li class="nav-item"><a class="nav-link" href="#use">View User</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Leave"> On Leave</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#Blog"> Blog</a></li>
               </ul>
             </div>
         
@@ -176,6 +177,50 @@
         </table>
     </div>
         </div>
+<div class="container" id="Blog">
+    <h1>Blogging Form:</h1>
+    <form action="action_page.php">
+      <div class="row">
+        <div class="col-25">
+          <label for="fname">First Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Last Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="country">Country</label>
+        </div>
+        <div class="col-75">
+          <select id="country" name="country">
+            <option value="australia">Australia</option>
+            <option value="canada">Canada</option>
+            <option value="usa">USA</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="subject">Subject</label>
+        </div>
+        <div class="col-75">
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <button type="button bg-secondary">Submit</button>
+      </div>
+    </form>
+  </div>
         <div id="d" class="w3-padding-64 w3-content w3-text-grey" style="padding:3em;background-color: black;margin-top: 3em;text-align: center;color:rgb(152, 140, 140)">
             <h2 class="w3-text-light-grey">Contact Me</h2>
             <hr style="width:200px" class="w3-opacity">
