--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         
           </nav>
 
+            <img src="A/letters-alphabet-ngo-wooden-cubes-green-plant-white-background-ngo-short-nongovernmental-organization_384017-4654.jpg" style="margin-left:10%;width:80%;box-shadow:5px 5px 15px gray">
+            
         <div class="container" id="dash">
             <div class="row">
               <div class="col-md-3 " style=" font-size:30px;font-weight: bold;margin-left :50px;">
