--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
           </nav>
 
-            <img src="A/letters-alphabet-ngo-wooden-cubes-green-plant-white-background-ngo-short-nongovernmental-organization_384017-4654.jpg" style="margin-left:10%;width:80%;box-shadow:5px 5px 15px gray">
+            <img src="A/letters-alphabet-ngo-wooden-cubes-green-plant-white-background-ngo-short-nongovernmental-organization_384017-4654.jpg" style="margin-left:10%;width:80%;box-shadow:5px 5px 15px gray;margin-top:100px">
             
         <div class="container" id="dash">
             <div class="row">
